// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders heading level with another size 1`] = `
.c0 {
  font-family: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: 300;
  line-height: calc(1em + 0.5rem);
  margin-bottom: 0.45em;
  margin-top: 0;
  color: inherit;
  font-size: 38.7898px;
  margin-bottom: 1.5rem;
}

.c0 small {
  line-height: 1;
}

.c0 small {
  font-size: 65%;
}

.c1 {
  font-family: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: 300;
  line-height: calc(1em + 0.5rem);
  margin-bottom: 0.45em;
  margin-top: 0;
  color: inherit;
  font-size: 31.104px;
  margin-bottom: 1.25rem;
}

.c1 small {
  line-height: 1;
}

.c1 small {
  font-size: 65%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 44.78976px;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:768px) {
  .c1 {
    font-size: 31.104px;
    margin-bottom: 1.25rem;
  }
}

<div>
  <div>
    <h1
      class="c0"
    >
      Heading level 1
    </h1>
    <h3
      class="c1"
    >
      Heading level 3
    </h3>
    <h3
      class="c0"
      size="1"
    >
      Heading level 3 size 1
    </h3>
  </div>
</div>
`;

exports[`renders knockout heading with different class 1`] = `
.c0 {
  font-family: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: 300;
  line-height: calc(1em + 0.5rem);
  margin-bottom: 0.45em;
  margin-top: 0;
  color: inherit;
  font-size: 38.7898px;
  margin-bottom: 1.5rem;
}

.c0 small {
  line-height: 1;
}

.c0 small {
  font-size: 65%;
}

.c1 {
  font-family: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: 300;
  line-height: calc(1em + 0.5rem);
  margin-bottom: 0.45em;
  margin-top: 0;
  color: inherit;
  font-size: 38.7898px;
  margin-bottom: 1.5rem;
}

.c1 small {
  line-height: 1;
}

.c1 small {
  font-size: 65%;
}

.c1.c1 {
  background-color: #0073b6;
  color: white;
  padding: 20px 15px;
}

@media (min-width:768px) {
  .c0 {
    font-size: 44.78976px;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:768px) {
  .c1 {
    font-size: 44.78976px;
    margin-bottom: 1.5rem;
  }
}

<div>
  <div>
    <h1
      class="c0"
    >
      Heading level 1
    </h1>
    <h1
      class="c1"
    >
      Knockout Heading level 1
    </h1>
  </div>
</div>
`;
